@@ -1,3 +1,6 @@
+- Added stack-based window switching using Ctrl+(Shift)+Tab; this replaces the old "Next Window" and "Previous Window" actions
+- Fixed: Graphics device windows would disappear when trying to attach them to the main window with some versions of Qt
+- Fixed: tcl/tk widgets would locki up after running commands in the R Console
 - Provide a template for bug reports, containing standardized information on the RKWard setup in Help->Report Bug...
 - When loading a (local) workspace, change the working directory to the directory of the workspace (configurable)
 - Include the sidebar position of tool windows when saving / restoring the workplace layout
